# shippinglabel

./: .bumpversion.cfg  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  README.rst  __pkginfo__.py  formate.toml  lint_roller.sh  make_conda_recipe.py  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  stubs.txt  tox.ini
.ci/: travis_deploy_conda.sh
.github/: actions_build_conda.sh  actions_deploy_conda.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  conda_ci.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Source.rst  conf.py  contributing.rst  index.rst  license.rst  local_extension.py  requirements.txt
doc-source/api/: checksum.rst  classifiers.rst  conda.rst  packing-tape.rst  pypi.rst  requirements.rst  sdist.rst  shippinglabel.rst
doc-source/extensions/: index.rst  shippinglabel-conda.rst  shippinglabel-pypi.rst
packing_tape/: __init__.py  requirements.py
shippinglabel/: __init__.py  checksum.py  classifiers.py  conda.py  pypi.py  requirements.py  sdist.py
shippinglabel/_vendor/: __init__.py  requirements.txt  trove_classifiers.pyi
tests/: conftest.py  requirements.txt  test_checksum.py  test_classifiers.py  test_conda.py  test_pypi.py  test_requirements.py  test_requirements_manager.py  test_requirements_win.py  test_sdist.py  test_shippinglabel.py
tests/cassettes/: test_bind_requirements[a_b_b].json  test_bind_requirements[a_c_b].json  test_bind_requirements[bad_specifiers].json  test_bind_requirements[bar_foo].json  test_bind_requirements[bar_foo_2].json  test_bind_requirements[bar_pkg-resources_foo].json  test_bind_requirements[comment_at_end].json  test_bind_requirements[comment_bar_comment_foo].json  test_bind_requirements[comment_barfoo_].json  test_bind_requirements[comment_foo_bar].json  test_bind_requirements[comment_foo_comment_bar].json  test_bind_requirements[foo_bar].json  test_bind_requirements[foo_bar_2].json  test_bind_requirements[foo_pkg-resources_bar].json  test_bind_requirements[newline_only].json  test_bind_requirements[real_requirements].json  test_metadata_nonexistant.json  test_pypi.json
tests/test_classifiers_/: test_classifiers_from_requirements_Tox__1_2_3_.yml  test_classifiers_from_requirements_arcade_.yml  test_classifiers_from_requirements_dash_flask_.yml  test_classifiers_from_requirements_dash_upper_.yml  test_classifiers_from_requirements_dulwich_southwark_.yml  test_classifiers_from_requirements_flake8_.yml  test_classifiers_from_requirements_flask_.yml  test_classifiers_from_requirements_jupyter_matplotlib_.yml  test_classifiers_from_requirements_jupyter_upper_.yml  test_classifiers_from_requirements_matplotlib_lower_.yml  test_classifiers_from_requirements_pygame_.yml  test_classifiers_from_requirements_pytest_.yml  test_classifiers_from_requirements_pytest_flake8_.yml  test_classifiers_from_requirements_sphinx_toolbox_.yml  test_classifiers_from_requirements_werkzeug_.yml
tests/test_conda_/: test_make_conda_description_channels___e_summary_a_.md  test_make_conda_description_channels___e_summary_b_.md  test_make_conda_description_channels_a_summary_a_.md  test_make_conda_description_channels_a_summary_b_.md  test_make_conda_description_channels_b_summary_a_.md  test_make_conda_description_channels_b_summary_b_.md  test_make_conda_description_channels_d_summary_a_.md  test_make_conda_description_channels_d_summary_b_.md
tests/test_pypi_/: test_get_metadata.yml  test_get_sdist_url_domdf_python_tools_.txt  test_get_sdist_url_mathematical_.txt  test_get_sdist_url_numpy_.txt  test_get_sdist_url_shippinglabel_.txt  test_get_wheel_url_domdf_python_tools_.txt  test_get_wheel_url_mathematical_.txt  test_get_wheel_url_shippinglabel_.txt
tests/test_requirements_/: test_list_requirements_1_apeye_3_10_.yml  test_list_requirements_1_apeye_3_6_.yml  test_list_requirements_1_apeye_3_8__.yml  test_list_requirements_1_apeye_3_9_.yml  test_list_requirements_1_cachecontrol_filecache__3_11_.yml  test_list_requirements_1_cachecontrol_filecache__3_6_.yml  test_list_requirements_1_cachecontrol_filecache__3_9_.yml  test_list_requirements_1_domdf_python_tools_.yml  test_list_requirements_1_domdf_python_tools_3_6_.yml  test_list_requirements_1_domdf_python_tools_3_7_.yml  test_list_requirements_1_domdf_python_tools_3_8_.yml  test_list_requirements_1_pytest_3_6_.yml  test_list_requirements_1_shippinglabel_.yml  test_list_requirements_1_shippinglabel_3_10_.yml  test_list_requirements_1_shippinglabel_3_6_.yml  test_list_requirements_1_shippinglabel_3_7_.yml  test_list_requirements_1_shippinglabel_3_8_.yml  test_list_requirements_1_shippinglabel_3_9_.yml  test_list_requirements_2_apeye_.yml  test_list_requirements_2_apeye_3_10_.yml  test_list_requirements_2_apeye_3_6_.yml  test_list_requirements_2_apeye_3_7_.yml  test_list_requirements_2_apeye_3_8_.yml  test_list_requirements_2_apeye_3_9_.yml  test_list_requirements_2_cachecontrol_filecache__3_7_.yml  test_list_requirements_2_cachecontrol_filecache__3_8_.yml  test_list_requirements_2_domdf_python_tools_.yml  test_list_requirements_2_domdf_python_tools_3_10_.yml  test_list_requirements_2_domdf_python_tools_3_11_.yml  test_list_requirements_2_domdf_python_tools_3_6_.yml  test_list_requirements_2_domdf_python_tools_3_7_.yml  test_list_requirements_2_domdf_python_tools_3_8_.yml  test_list_requirements_2_domdf_python_tools_3_8__.yml  test_list_requirements_2_pytest_3_6_.yml  test_list_requirements_2_pytest_3_7_.yml  test_list_requirements_2_shippinglabel_.yml  test_list_requirements_2_shippinglabel_3_10_.yml  test_list_requirements_2_shippinglabel_3_11_.yml  test_list_requirements_2_shippinglabel_3_6_.yml  test_list_requirements_2_shippinglabel_3_7_.yml  (+90 more)
tests/test_requirements_win_/: test_list_requirements_1_pytest_3_7_.yml  test_list_requirements_1_pytest_3_8__.yml  test_list_requirements_2_domdf_python_tools_3_6_.yml  test_list_requirements_2_pytest_3_6_.yml  test_list_requirements_2_pytest_3_7_.yml  test_list_requirements_3_apeye_3_6_.yml  (+35 more)
(+40 files in other folders)
