[build-system]
requires = [ "setuptools>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "shippinglabel"
version = "0.14.1"
description = "Utilities for handling packages."
readme = "README.rst"
keywords = [ "packaging", "requirements", "pypi", "conda",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/shippinglabel"
"Issue Tracker" = "https://github.com/domdfcoding/shippinglabel/issues"
"Source Code" = "https://github.com/domdfcoding/shippinglabel"
Documentation = "https://shippinglabel.readthedocs.io/en/latest"

[tool.mkrecipe]
conda-channels = [ "conda-forge", "domdfcoding",]
extras = "all"
license-key = "MIT"
