[build-system]
requires = [ "setuptools>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "shippinglabel"
version = "1.0.0"
description = "Utilities for handling packages."
readme = "README.rst"
keywords = [ "conda", "packaging", "pypi", "requirements",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/domdfcoding/shippinglabel"
"Issue Tracker" = "https://github.com/domdfcoding/shippinglabel/issues"
"Source Code" = "https://github.com/domdfcoding/shippinglabel"
Documentation = "https://shippinglabel.readthedocs.io/en/latest"

[tool.mkrecipe]
conda-channels = [ "conda-forge", "domdfcoding",]
extras = "all"
license-key = "MIT"

[tool.sphinx-pyproject]
github_username = "domdfcoding"
github_repository = "shippinglabel"
author = "Dominic Davis-Foster"
project = "shippinglabel"
copyright = "2020-2021 Dominic Davis-Foster"
language = "en"
package_root = "shippinglabel"
extensions = [
    "sphinx_toolbox",
    "sphinx_toolbox.more_autodoc",
    "sphinx_toolbox.more_autosummary",
    "sphinx_toolbox.documentation_summary",
    "sphinx_toolbox.tweaks.param_dash",
    "sphinx_toolbox.tweaks.latex_layout",
    "sphinx_toolbox.tweaks.latex_toc",
    "sphinx.ext.intersphinx",
    "sphinx.ext.mathjax",
    "sphinxcontrib.extras_require",
    "sphinx.ext.todo",
    "sphinxemoji.sphinxemoji",
    "notfound.extension",
    "sphinx_copybutton",
    "sphinxcontrib.default_values",
    "sphinxcontrib.toctree_plus",
    "sphinx_debuginfo",
    "seed_intersphinx_mapping",
    "sphinx_toolbox_experimental.html_section",
    "sphinx_toolbox_experimental.autosummary_widths",
    "sphinx_toolbox_experimental.needspace",
    "sphinx_toolbox_experimental.peps",
    "sphinx_toolbox_experimental.missing_xref",
    "local_extension",
]
sphinxemoji_style = "twemoji"
gitstamp_fmt = "%d %b %Y"
templates_path = [ "_templates",]
html_static_path = [ "_static",]
source_suffix = ".rst"
master_doc = "index"
suppress_warnings = [ "image.nonlocal_uri",]
pygments_style = "default"
html_theme = "domdf_sphinx_theme"
html_theme_path = [ "../..",]
html_show_sourcelink = true
toctree_plus_types = [
    "class",
    "confval",
    "data",
    "directive",
    "enum",
    "exception",
    "flag",
    "function",
    "namedtuple",
    "protocol",
    "role",
    "typeddict",
]
add_module_names = false
hide_none_rtype = true
all_typevars = true
overloads_location = "bottom"
autodoc_exclude_members = [
    "__dict__",
    "__class__",
    "__dir__",
    "__weakref__",
    "__module__",
    "__annotations__",
    "__orig_bases__",
    "__parameters__",
    "__subclasshook__",
    "__init_subclass__",
    "__attrs_attrs__",
    "__init__",
    "__new__",
    "__getnewargs__",
    "__abstractmethods__",
    "__hash__",
]

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Packaging",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
