# This file is managed by 'repo_helper'.
# You may add new sections, but any changes made to the following sections will be lost:
#     * metadata
#     * options
#     * options.packages.find
#     * mypy
#     * options.entry_points

[metadata]
name = shippinglabel
version = 1.7.1
author = Dominic Davis-Foster
author_email = dominic@davis-foster.co.uk
license = MIT License
keywords = packaging, requirements, pypi, conda
long_description = file: README.rst
long_description_content_type = text/x-rst
platforms = Windows, macOS, Linux
url = https://github.com/domdfcoding/shippinglabel
project_urls =
    Documentation = https://shippinglabel.readthedocs.io/en/latest
    Issue Tracker = https://github.com/domdfcoding/shippinglabel/issues
    Source Code = https://github.com/domdfcoding/shippinglabel
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging
    Typing :: Typed

[options]
python_requires = >=3.6.1
zip_safe = False
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    doc-source
    tests
    tests.*
